--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -30,6 +30,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login" />
+
+
+            <TextView
+                android:id="@+id/button_forgotpwd"
+                android:layout_width="match_parent"
+                android:clickable="true"
+                android:layout_height="wrap_content"
+                android:text="Forgot Passowrd" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
