--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,4 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView3"
         android:text="Change Password" />
+
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/changepwd_button"
+        android:text="Logout" />
 </RelativeLayout>
